--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -31,6 +31,9 @@
   margin-top: -30px;
   border-radius: 12px;
   padding: 0 10%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row-reverse;
 }
 
 .column {
@@ -111,3 +114,21 @@ button {
 }
 
 /* CODE HERE */
+
+.navbar{
+  display:flex;
+  justify-content: space-between;
+}
+
+.banner {
+  text-align: center;
+}
+
+@media screen and (max-width: 700px){
+  .desktop {
+    display: none;
+  }
+  .skills {
+    flex-direction: column-reverse;
+  }
+}
