--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -111,3 +111,40 @@ button {
 }
 
 /* CODE HERE */
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+}
+
+.introduction {
+  text-align: center;
+}
+
+.skills {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+@media only screen and (max-width: 700px) {
+  .introduction {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .skills {
+    flex-direction: row-reverse;
+    justify-content: center;
+  }
+}
+
+
