--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -111,3 +111,18 @@ button {
 }
 
 /* CODE HERE */
+
+header {
+  display: flex;
+}
+.navbar {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding-bottom: 1rem;
+    width: 100%;
+}
+
+.banner {
+  text-align: center;
+}
