--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -126,3 +126,8 @@ header {
 .banner {
   text-align: center;
 }
+@media only screen and (max-width: 700px) {
+  #bigimg {
+    display: none;
+  }
+}
