The list of skills is now on the same line for screens greater than 700px

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -131,3 +131,12 @@ header {
     display: none;
   }
 }
+
+@media only screen and (min-width: 700px) {
+ .skills {
+   display: flex;
+ }
+ .column{
+   width: 100%;
+ }
+}
