finished the bonus.

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -144,4 +144,12 @@ header {
  .column{
    width: 100%;
  }
+ .projects {
+   display: flex;
+   flex-direction: row;
+ }
+}
+
+.inprogress {
+  opacity: 0.6;
 }
