--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -111,3 +111,106 @@ button {
 }
 
 /* CODE HERE */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+.menu a:hover {
+  color: #750ff7;
+}
+
+.first-banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.dev-title {
+  font-weight: bold;
+}
+
+.introduction {
+  display: flex;
+  justify-content: center;
+}
+
+.skills {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.column {
+  width: 100%;
+}
+
+.disabled {
+  opacity: 0.3;
+}
+
+.projects {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.modify {
+  /*background-color: #e59aa6;*/
+  display: flex;
+  width: 12%;
+  height: 2rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  border: solid 2px white;
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+  transition: 0.2s all;
+}
+
+.modify:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
+.modify p {
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  justify-content: center;
+}
+
+.modify-skills {
+  background-color: #f06b72;
+  display: flex;
+  justify-content: center;
+  width: 50%
+
+
+}
+
+
+@media only screen and (max-width: 700px) {
+  .introduction {
+    display: none;
+  }
+  .skills {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+  .projects {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .box {
+    width: 50%;
+  }
+}
+
