--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -124,6 +124,10 @@ button {
   text-align: center;
 }
 
+.disabled {
+  opacity: 0.5;
+}
+
 @media screen and (max-width: 700px){
   .desktop {
     display: none;
